@@ -47,6 +47,7 @@ import frodo2.algorithms.varOrdering.dfs.DFSgeneration;
 import frodo2.algorithms.varOrdering.dfs.DFSgeneration.DFSview;
 import frodo2.communication.IncomingMsgPolicyInterface;
 import frodo2.communication.Message;
+import frodo2.communication.MessageType;
 import frodo2.communication.Queue;
 import frodo2.communication.QueueOutputPipeInterface;
 import frodo2.communication.sharedMemory.QueueIOPipe;
@@ -66,7 +67,7 @@ import junit.framework.TestSuite;
  * @param <U> the type used for utility values
  *
  */
-public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > extends TestCase implements IncomingMsgPolicyInterface<String> {
+public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > extends TestCase implements IncomingMsgPolicyInterface<MessageType> {
 
 	/** Maximum number of variables in the random graph 
 	 * @note Must be at least 2. 
@@ -88,8 +89,8 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 	 */
 	private final Object nbrMsgsRemaining_lock = new Object ();
 	
-	/** List of queues corresponding to the different agents */
-	private Queue[] queues;
+	/** List of queues, indexed by agent name */
+	private Map<String, Queue> queues;
 	
 	/** The parameters for adopt*/
 	private Element parameters;
@@ -160,7 +161,7 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 		parameters = new Element ("module");
 		parameters.setAttribute("reportStats", "true");
 
-		optUtil = this.utilClass.newInstance().getZero();
+		optUtil = this.utilClass.getConstructor().newInstance().getZero();
 	}
 
 	/** 
@@ -170,7 +171,7 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 		super.tearDown();
 		graph = null;
 		dfs = null;
-		for (Queue queue : queues) {
+		for (Queue queue : queues.values()) {
 			queue.end();
 		}
 		queues = null;
@@ -220,19 +221,18 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 	@SuppressWarnings("unchecked")
 	public void test () 
 	throws IOException, NoSuchMethodException, IllegalArgumentException, InstantiationException, IllegalAccessException, ClassNotFoundException, InvocationTargetException {
-		int nbrAgents = graph.clusters.size();
 		
 		nbrMsgsRemaining = graph.components.size(); // One OptUtilMessage per root
 		
 		// Create the queue network
-		queues = new Queue [nbrAgents];
-		QueueOutputPipeInterface[] pipes = AllTests.createQueueNetwork(queues, graph, useTCP);
+		queues = new HashMap<String, Queue> ();
+		Map<String, QueueOutputPipeInterface> pipes = AllTests.createQueueNetwork(queues, graph, useTCP);
 
 		// Listen for statistics messages
 		myQueue = new Queue (false);
 		myQueue.addIncomingMessagePolicy(this);
 		QueueIOPipe myPipe = new QueueIOPipe (myQueue);
-		for (Queue queue : queues) 
+		for (Queue queue : queues.values()) 
 			queue.addOutputPipe(AgentInterface.STATS_MONITOR, myPipe);
 		
 		// Create the listeners
@@ -241,7 +241,7 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 		parser.setUtilClass(this.utilClass);
 		
 		for (String agent : parser.getAgents()) {
-			Queue queue = queues[Integer.parseInt(agent)];
+			Queue queue = queues.get(agent);
 
 			if (useXML) { // use the XML-based constructor
 
@@ -296,7 +296,7 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 		assertEquals(solution.getUtility(), optUtil);
 		
 		// Properly close the pipes
-		for (QueueOutputPipeInterface pipe : pipes) {
+		for (QueueOutputPipeInterface pipe : pipes.values()) {
 			pipe.close();
 		}
 		myQueue.end();
@@ -305,20 +305,20 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 	/** Sends messages to the queues to initiate O-DPOP
 	 * @param graph 		the constraint graph
 	 * @param dfs 			the corresponding DFS (for each node in the graph, the relationships of this node)
-	 * @param queues 		the array of queues, indexed by the clusters in the graph
+	 * @param queues 		the array of queues, indexed by the names of the clusters in the graph
 	 */
-	public static < V extends Addable<V>, U extends Addable<U> > void startUTILpropagation(RandGraphFactory.Graph graph, Map< String, DFSview<V, U> > dfs, Queue[] queues) {
+	public static < V extends Addable<V>, U extends Addable<U> > void startUTILpropagation(RandGraphFactory.Graph graph, 
+			Map< String, DFSview<V, U> > dfs, Map<String, Queue> queues) {
 		
 		// To every agent, send its part of the DFS and extract from the problem definition the constraint it is responsible for enforcing
-		int nbrAgents = graph.clusters.size();
-		for (int i = 0; i < nbrAgents; i++) {
-			Queue queue = queues[i];
+		for (Map.Entry<String, Queue> entry : queues.entrySet()) {
+			Queue queue = entry.getValue();
 			// Send the start message to this agent
 			Message msg = new Message (AgentInterface.START_AGENT);
 			queue.sendMessageToSelf(msg);
 
 			// Extract the agent's part of the DFS and the constraint it is responsible for enforcing
-			List<String> variables = graph.clusters.get(i);
+			List<String> variables = graph.clusters.get(entry.getKey());
 			for (String var : variables) {
 				// Extract and send the relationships for this variable
 				msg = new DFSgeneration.MessageDFSoutput<V, U> (var, dfs.get(var));
@@ -328,8 +328,8 @@ public class UTILpropagationTest < V extends Addable<V>, U extends Addable<U> > 
 	}
 	
 	/** @see IncomingMsgPolicyInterface#getMsgTypes() */
-	public Collection<String> getMsgTypes() {
-		ArrayList<String> types = new ArrayList<String> (1);
+	public Collection<MessageType> getMsgTypes() {
+		ArrayList<MessageType> types = new ArrayList<MessageType> (1);
 		types.add(UTILpropagationFullDomain.OPT_UTIL_MSG_TYPE);
 		return types;
 	}
